Still fixing spacing issue in landscape

--- a/style.scss
+++ b/style.scss
@@ -43,7 +43,7 @@
 
 html,
 body {
-	width: 100%;
+	width: 100vw;
 	overflow-x: hidden;
 }
 
